# i2c_manager

./: CMakeLists.txt  Kconfig
i2c_manager/: i2c_manager.c
